# Proof-of-Work

./: CMakeLists.txt  MerkleTree.cpp  MerkleTree.h  README.md  hash_function.py  main.cpp  main.py  pseudorandom_number_generator.py  schnorr_signature.py  structs.py  tests.cpp
